# openai_tts_api

./: .env  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: __init__.py
app/api/: routes.py
app/utils/: __init__.py  generate.py  utils.py
dashboard/: sl_dashboard.py
